--- a/OrangePi/OrangePi/OrangePi/Base.lproj/Main.storyboard
+++ b/OrangePi/OrangePi/OrangePi/Base.lproj/Main.storyboard
@@ -76,7 +76,7 @@
                                             <constraint firstAttribute="height" constant="25" id="RYi-U9-6VX"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <state key="normal" title="test">
+                                        <state key="normal" title="connect">
                                             <color key="titleColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -166,11 +166,7 @@
                         </constraints>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Title" id="1Xf-iY-TB5">
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="Amc-EY-f58">
-                            <color key="tintColor" red="1" green="0.80000001192092896" blue="0.40000000596046448" alpha="1" colorSpace="calibratedRGB"/>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Title" id="1Xf-iY-TB5"/>
                     <connections>
                         <outlet property="addressTextField" destination="6Fp-EW-cVF" id="NnE-or-SHM"/>
                         <outlet property="connectButton" destination="09w-F4-irw" id="8hh-Dt-kft"/>
@@ -328,10 +324,10 @@
             </objects>
             <point key="canvasLocation" x="650" y="978"/>
         </scene>
-        <!--View Controller-->
+        <!--Cmd View Controller-->
         <scene sceneID="EoQ-Qv-cA5">
             <objects>
-                <viewController id="Je6-sk-TqA" sceneMemberID="viewController">
+                <viewController id="Je6-sk-TqA" customClass="CmdViewController" customModule="OrangePi" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="hYk-gN-mRc"/>
                         <viewControllerLayoutGuide type="bottom" id="Han-rh-Ern"/>
@@ -339,9 +335,30 @@
                     <view key="view" contentMode="scaleToFill" id="B6s-Z8-Xvn">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QMt-WR-4b8">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Je6-sk-TqA" id="1ZV-aC-Re6"/>
+                                </connections>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="QMt-WR-4b8" firstAttribute="trailing" secondItem="Han-rh-Ern" secondAttribute="trailing" id="4Z1-Lr-a3G"/>
+                            <constraint firstItem="QMt-WR-4b8" firstAttribute="bottom" secondItem="Han-rh-Ern" secondAttribute="top" id="8S9-Hu-xgC"/>
+                            <constraint firstItem="QMt-WR-4b8" firstAttribute="leading" secondItem="Han-rh-Ern" secondAttribute="leading" id="U8s-2c-66n"/>
+                            <constraint firstItem="QMt-WR-4b8" firstAttribute="top" secondItem="hYk-gN-mRc" secondAttribute="bottom" id="iMF-Vz-W6N"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="cxx-Cx-tUK"/>
+                    <connections>
+                        <outlet property="cmdTxtView" destination="QMt-WR-4b8" id="g7q-EX-cKE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HMa-XJ-iQD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
